tests/tooling/fixtures/native/recovery/negative/negative_switch_parser_missing_case_colon.objc3
// Expected diagnostic code(s): O3P107, O3P103, O3P100.
module NegativeSwitchParserMissingCaseColon;

fn main() -> i32 {
  let x = 1;
  switch (x) {
    case 1
      return 1;
    default:
      return 0;
  }
}
